# Buscador-de-Arquivos

./: exceptions.py  finder.py  finder_report_08072023154425751758.txt  pyproject.toml  utils.py
file_finder/: constants.py  exceptions.py  finder.py  utils.py
