[tool.poetry]
name = "file-finder"
version = "0.1.0"
description = ""
authors = ["Frouzin <matheusereis44@gmail.com>"]
readme = "README.md"
packages = [{include = "file_finder"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.4"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
